# r-cli

./: Cargo.toml  LICENSE  README.md  install
src/: main.rs
src/commands/: mod.rs
src/commands/hex/: hex_converter.rs  mod.rs
src/commands/wad/: mod.rs  wad_converter.rs
