[package]
name = "ru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
alloy-primitives = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cli-table = "0.4.7"
colored = "2.1.0"
f256 = "0.2.0"
